# aoc24-ocaml

./: .envrc  .gitignore  README.md  aoc24.opam  dune-project  flake.nix  justfile
lib/: day01.ml  day02.ml  dune  util.ml
nix/modules/: devshell.nix  formatter.nix
