(lang dune 3.16)

(name aoc24)

(generate_opam_files true)

(source
 (github anntnzrb/aoc24-ml))

(authors "anntnzrb")

(maintainers "anntnzrb")

(license COPYING)

(documentation https://github.com/anntnzrb/aoc24-ml)

(package
 (name aoc24)
 (synopsis "Advent of Code 2024, in OCaml.")
 (description "Advent of Code 2024, in OCaml.")
 (depends ocaml dune))
