(lang dune 3.16)

(name aoc24)

(generate_opam_files true)

(source
 (github anntnzrb/aoc24-ocaml))

(authors "anntnzrb")

(maintainers "anntnzrb")

(license COPYING)

(documentation https://github.com/anntnzrb/aoc24-ocaml)

(package
 (name aoc24)
 (synopsis "Advent of Code 2024, in OCaml.")
 (description "Advent of Code 2024, in OCaml.")
 (depends ocaml dune base containers))
